src/test/ui/macros/macro-name-typo.stderr
error: cannot find macro `printlx!` in this scope
  --> $DIR/macro-name-typo.rs:2:5
   |
LL |     printlx!("oh noes!"); //~ ERROR cannot find
   |     ^^^^^^^ help: you could try the macro: `println`

error: aborting due to previous error

